@@ -1,5 +1,10 @@
 2008-11-08  Luca Bruno  <lethalman88@gmail.com>
 
+	* src/vgl-main-window.c (about_dialog_uri_hook): added, both
+	handles emails and urls
+	(show_about_dialog): add global about dialog hooks if GIO is
+	available
+
 	* src/util.c (launch_url): added
 
 	* configure.ac: check for GIO as optional dependency
